--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "as-number": "^1.0.0",
+    "brfs": "^1.2.0",
     "gl-basic-shader": "^1.2.2",
     "gl-mat4": "^1.0.1",
+    "gl-shader-core": "^2.2.0",
     "gl-sprite-text": "^2.2.0",
     "gl-texture2d": "^2.0.8",
     "glslify": "^1.6.0",
@@ -64,7 +66,7 @@
   },
   "browserify": {
     "transform": [
-      "glslify"
+      "brfs"
     ]
   }
 }
