--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
     "bluebird": "^2.3.11",
     "bmfont-lato": "^2.0.0",
     "domready": "^1.0.7",
+    "garnish": "^2.0.1",
     "gl-texture2d": "^2.0.8",
     "img": "^1.0.0",
-    "scriptjs": "^2.5.7",
-    "three-orbit-viewer": "69.1.0"
+    "three": "^0.69.0",
+    "three-orbit-viewer": "69.1.0",
+    "wzrd": "^1.2.1"
   },
   "scripts": {
-    "test": "node test.js"
+    "demo": "wzrd test.js | garnish"
   },
   "keywords": [
     "sprite",
