--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "baboon-image-uri": "^1.0.1",
     "bluebird": "^2.3.11",
     "bmfont-lato": "^2.0.0",
+    "browserify": "^8.1.3",
     "domready": "^1.0.7",
     "garnish": "^2.0.1",
     "gl-texture2d": "^2.0.8",
